Archive2/6d/83eb646e8430f5/output
main.cpp:7:37: error: in-class initializer for static data member is not a constant expression; folding it to a constant is a GNU extension [-Werror,-Wgnu-folding-constant]
        const static int numSamples = int( ( 4.0 / (tempo/60.0) ) * double(samplerate) );
                                      ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
*** failed ***
